<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="understand">зрозуміло</string>
    <string name="rules">Правила гри: перед вами буде три фігури, дві знизу і одна зверху, в двох з них будуть числа. Необхідно, щоб сума чисел з двох нихніх фігур була рівна числу в верхній фігурі, для цього потрібно вставити необхідне число. \n\nПриклад: у верхньому колі число 7, а в одному з нижніх знак питання, а в іншому число 4. Тому, на місці знака питання має бути число 3, тому що 3 + 4 = 7</string>
    <string name="rules_title">Склад числа</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_difficulty">Оберіть складність:</string>
    <string name="test_difficulty">тестова</string>
    <string name="easy">легко</string>
    <string name="normal">середня</string>
    <string name="hard">складно</string>
    <string name="question_mark">\?</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш рахунок: %s</string>
    <string name="score_percentage">Відсоток правильних відповідей: %s</string>
    <string name="retry">Спробувати ще</string>
    <string name="right_answers">Правильних відповідей %s з %s необхідних</string>
    <string name="required_percentage">Необхідний відсоток правильних відповідей: %s</string>
    <string name="required_score">Необхідна кількість правильних відповідей: %s</string>
    <string name="progress_answers">Правильних відповідей %s (мінімум %s)</string>
</resources>